--- a/interface/public/index.html
+++ b/interface/public/index.html
@@ -33,7 +33,9 @@
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="root"></div>
+		<div id="root">
+			
+		</div>
 		<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -43,7 +45,8 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+	-->
+		
 		<script
 			type="module"
 			src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.15/dist/shoelace/shoelace.esm.js"
